--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "chat-example",
-  "version": "0.0.0",
-  "description": "A chat example to showcase how to use `socket.io` with a static `express` server with `async` for control flow.",
+  "name": "request-headers",
+  "version": "1.0.0",
+  "description": "A web service that gives some information from the request headers",
   "main": "server.js",
+  "start": "node server.js",
   "repository": "",
-  "author": "Mostafa Eweda <mo.eweda@gmail.com>",
+  "author": "Drew Sartorius",
   "dependencies": {
     "async": "~0.2.8",
     "express": "~3.2.4",
